<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    tools:context=".MainActivity">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentStart="true"
        android:id="@+id/tableRow2"
        android:layout_marginBottom="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titulo_formula"
            android:text="@string/titulo_formula"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_margin="10dp"
            android:textSize="20dp" />






    </TableRow>

<ScrollView
    android:layout_width="fill_parent"
    android:id="@+id/scrollview"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:id="@+id/contenido"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/formula"
            android:text="@string/formula"
            android:textColor="#000000"
            android:layout_below="@+id/titulo_formula"
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/explicacion"
            android:text="@string/explicacion"
            android:textColor="#000000"
            android:layout_below="@+id/titulo_formula"
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:layout_weight="1" />


    </LinearLayout>


</ScrollView>






    <ImageButton
        android:layout_width="50dp"
        android:layout_height="76dp"
        android:id="@+id/imageView"
        android:background="@drawable/utpl_azul"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/scrollview"
        android:layout_marginTop="10dp" />



</RelativeLayout>